[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/enemies/mob/mob_2.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/mob/enemy.png" type="Texture" id=2]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/hit.gd" type="Script" id=6]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/takeDamage.gd" type="Script" id=7]
[ext_resource path="res://scripts/enemies/mob/behavior/wait.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/mob/behavior/search.gd" type="Script" id=9]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/attack.gd" type="Script" id=10]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_2/in_range_interval.gd" type="Script" id=11]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_2/correct_range.gd" type="Script" id=12]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throwable.gd" type="Script" id=13]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throw.gd" type="Script" id=14]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_2/circle_around.gd" type="Script" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 31.4337

[sub_resource type="CircleShape2D" id=6]
radius = 39.9287

[sub_resource type="Animation" id=3]
resource_name = "a_pattern"
length = 1.68334
step = 0.0166667
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:unit_vector_multiplier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -50, -0.25, 0, 0.25, 0, 300, -0.0354591, -162.723, 0.0256223, -184.323, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.333334, 0.833335, 1.66667 )
}

[sub_resource type="CircleShape2D" id=4]
radius = 31.5907

[sub_resource type="CircleShape2D" id=5]
radius = 300.0

[node name="mob" type="RigidBody2D"]
collision_layer = 4
collision_mask = 0
mode = 2
mass = 2.04082
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.26135, -8.82942 )
scale = Vector2( 1.89135, 1.62226 )
texture = ExtResource( 2 )
hframes = 5

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 66

[node name="shape" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -0.678001, -11.6216 )
shape = SubResource( 6 )

[node name="attack" type="AnimationPlayer" parent="."]
anims/a_pattern = SubResource( 3 )

[node name="pro_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="pro_shape" type="CollisionShape2D" parent="pro_box"]
shape = SubResource( 4 )
disabled = true

[node name="pro_box_wall" type="Area2D" parent="."]
collision_layer = 0

[node name="pro_shape" type="CollisionShape2D" parent="pro_box_wall"]
shape = SubResource( 4 )
disabled = true

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree"]
script = ExtResource( 3 )

[node name="BehaviorSequence3" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 5 )

[node name="throwable" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 13 )

[node name="throw" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 14 )

[node name="BehaviorSequence" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 5 )

[node name="hit" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 6 )

[node name="takeDamage" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 7 )

[node name="BehaviorSequence2" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 5 )

[node name="search" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 9 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 3 )

[node name="BehaviorSequence" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector"]
script = ExtResource( 5 )

[node name="on_range_interval" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 11 )

[node name="circle" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 15 )

[node name="attack" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 10 )

[node name="correct_range" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector"]
script = ExtResource( 12 )

[node name="wait" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 8 )

[node name="chaseBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="chase_shape" type="CollisionShape2D" parent="chaseBox"]
shape = SubResource( 5 )

[node name="ThrowTime" type="Timer" parent="."]
wait_time = 0.3

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_parry_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_player_entered"]
[connection signal="body_entered" from="pro_box" to="." method="_on_pro_box_enemy_entered"]
[connection signal="body_entered" from="pro_box_wall" to="." method="_on_pro_box_wall_wall_entered"]
[connection signal="body_entered" from="chaseBox" to="." method="_on_chaseBox_body_entered"]
[connection signal="timeout" from="ThrowTime" to="." method="slowTimeThrow"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
